width issues on mobile resolution fixed

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -503,7 +503,13 @@ input[name='q']::placeholder {
 
 
 /********** FOOTER MOBILE***************/
-@media (max-width: 320px) {
+@media screen and (max-width: 320px) and (max-height: 480px) {
+    body, html{
+        width: 100%;
+        height:100%;
+        overflow-x: hidden;
+    }
+
     footer{
         height: auto;
         padding: 15px 10px;
@@ -526,7 +532,6 @@ input[name='q']::placeholder {
         order: 3; 
     }
 
-    
 
     .footer-right {
         order: 2;
@@ -554,16 +559,13 @@ input[name='q']::placeholder {
 /********** HEADER MOBILE***************/
     nav{
         font-size: smaller;
-        margin-right: 40px;
+        margin-right: 0;
+        width: 100%;
     }
 
     .header-container{
         height: 20px;
         padding-top: 0px;
-    }
-
-    #delivery-banner{
-       padding-right: 30px;
     }
     
     .index{
